# BlockSecScan

./: .gitignore  BlockSecScan_v0.1_交付文档.md  BlockSecScan_项目规划与对话蒸馏.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  mcp-config-example.json  pyproject.toml
blocksec/: __init__.py
blocksec/api/: public.py
blocksec/cli/: main.py
blocksec/mcp/: server.py
blocksec/reports/exporters/: sarif_exporter.py
blocksec/scanners/: base.py
blocksec/scanners/fabric_runtime/: __init__.py  docker_check.py  scanner.py  tls_check.py
blocksec/scanners/smart_contract/: __init__.py  owasp_map.py  scanner.py  slither_runner.py
blocksec/web/: database.py  models.py  server.py
labs/solidity-vuln/: expected_findings.json
labs/solidity-vuln/contracts/: AccessControl.sol  Reentrancy.sol  TxOrigin.sol  UncheckedCall.sol
tests/unit/: test_fabric_rules.py  test_smart_contract.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  api.ts  i18n.ts  router.ts
web/src/components/: FindingCard.vue  ScanProgress.vue  SeverityBadge.vue  StatCard.vue
web/src/views/: Dashboard.vue  NewScan.vue  Rules.vue  ScanHistory.vue  ScanResult.vue
